Рефакторинг по ревью: - Удалены лишние InMemory-репозитории, теперь все работает через JpaRepository - Удалены ненужные аннотации в сущностях - Оптимизированы запросы и методы репозиториев