@@ -1,5 +1,7 @@
 package ru.practicum.shareit.booking.service;
 
+import org.springframework.data.domain.Sort;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -12,6 +14,7 @@ import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.exceptions.NotFoundException;
 import ru.practicum.shareit.exceptions.WrongRequestException;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.DbItemRepository;
 import ru.practicum.shareit.item.service.ItemService;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.mapper.UserMapper;
@@ -19,7 +22,6 @@ import ru.practicum.shareit.user.service.UserService;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -30,27 +32,16 @@ public class BookingServiceImpl implements BookingService {
     private final ItemService itemService;
     private final BookingMapper mapper;
     private final UserMapper userMapper;
+    private final DbItemRepository itemRepository;
 
     @Override
-    public BookingResponseDto makeBooking(BookingRequestDto dto, long userId) {
+    public BookingResponseDto makeBooking(@Valid BookingRequestDto dto, long userId) {
         UserDto userDto = userService.getUserById(userId);
 
         Item item = itemService.getItemEntityById(dto.getItemId());
 
         if (!item.isAvailable()) {
             throw new WrongRequestException("Объект не доступен для бронирования.");
-        }
-
-        if (item.getOwnerId() == userId) {
-            throw new NotFoundException("Владелец не может бронировать свою вещь");
-        }
-
-        if (dto.getStart().isAfter(dto.getEnd())) {
-            throw new WrongRequestException("Дата начала должна быть раньше даты окончания");
-        }
-
-        if (dto.getStart().isBefore(LocalDateTime.now())) {
-            throw new WrongRequestException("Дата начала не может быть в прошлом");
         }
 
         Booking booking = mapper.mapRequestDtoToBooking(dto);
@@ -63,7 +54,8 @@ public class BookingServiceImpl implements BookingService {
 
     @Override
     public BookingResponseDto approveBooking(long userId, long bookingId, boolean approved) {
-        Booking booking = bookingRepository.findById(bookingId);
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new NotFoundException("Booking not found"));
         if (booking == null) {
             throw new NotFoundException("Бронирование не найдено");
         }
@@ -84,7 +76,8 @@ public class BookingServiceImpl implements BookingService {
 
     @Override
     public BookingResponseDto getBookingById(long userId, long bookingId) {
-        Booking booking = bookingRepository.findById(bookingId);
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new NotFoundException("Booking not found"));
         if (booking == null) {
             throw new NotFoundException("Бронирование не найдено");
         }
@@ -100,47 +93,46 @@ public class BookingServiceImpl implements BookingService {
     public List<BookingResponseDto> getAllUserBooking(long userId, BookingState state) {
         userService.getUserById(userId);
 
-        List<Booking> bookings = bookingRepository.findByBookerId(userId);
-        return filterBookingsByState(bookings, state);
+        Sort newestFirst = Sort.by(Sort.Direction.DESC, "start");
+        List<Booking> bookings = switch (state) {
+            case ALL -> bookingRepository.findByBookerId(userId);
+            case PAST -> bookingRepository.findByBookerIdAndEndIsBefore(userId, LocalDateTime.now(), newestFirst);
+            case FUTURE -> bookingRepository.findByBookerIdAndStartIsAfter(userId, LocalDateTime.now(), newestFirst);
+            case CURRENT ->
+                    bookingRepository.findByBookerIdAndStartIsBeforeAndEndIsAfter(userId, LocalDateTime.now(), LocalDateTime.now(), newestFirst);
+            case WAITING -> bookingRepository.findByBookerIdAndStatus(userId, BookingStatus.WAITING, newestFirst);
+            case REJECTED -> bookingRepository.findByBookerIdAndStatus(userId, BookingStatus.REJECTED, newestFirst);
+            default -> throw new WrongRequestException("Unknown state: " + state);
+        };
+
+        return bookings.stream()
+                .map(mapper::mapBookingToResponseDto)
+                .toList();
     }
+
 
     @Override
     public List<BookingResponseDto> getAllUserItemBooking(long userId, BookingState state) {
         userService.getUserById(userId);
 
-        List<Booking> bookings = bookingRepository.findAllByOwnerId(userId);
-        return filterBookingsByState(bookings, state);
-    }
-
-    private List<BookingResponseDto> filterBookingsByState(List<Booking> bookings, BookingState state) {
-        LocalDateTime now = LocalDateTime.now();
-
-        List<Booking> filteredBookings = switch (state) {
-            case PAST -> bookings.stream()
-                    .filter(booking -> booking.getEnd().isBefore(now))
-                    .collect(Collectors.toList());
-
-            case FUTURE -> bookings.stream()
-                    .filter(booking -> booking.getStart().isAfter(now))
-                    .collect(Collectors.toList());
-
-            case CURRENT -> bookings.stream()
-                    .filter(booking -> booking.getStart().isBefore(now) && booking.getEnd().isAfter(now))
-                    .collect(Collectors.toList());
-
-            case WAITING -> bookings.stream()
-                    .filter(booking -> booking.getStatus() == BookingStatus.WAITING)
-                    .collect(Collectors.toList());
-
-            case REJECTED -> bookings.stream()
-                    .filter(booking -> booking.getStatus() == BookingStatus.REJECTED)
-                    .collect(Collectors.toList());
-
-            default -> bookings;
+        Sort newestFirst = Sort.by(Sort.Direction.DESC, "start");
+        List<Booking> bookings = switch (state) {
+            case ALL -> bookingRepository.findAllByOwnerId(userId);
+            case WAITING -> bookingRepository.findByItemInAndStatus(
+                    itemRepository.findByOwnerId(userId),
+                    BookingStatus.WAITING,
+                    newestFirst
+            );
+            case REJECTED -> bookingRepository.findByItemInAndStatus(
+                    itemRepository.findByOwnerId(userId),
+                    BookingStatus.REJECTED,
+                    newestFirst
+            );
+            default -> throw new WrongRequestException("Unknown state: " + state);
         };
 
-        return filteredBookings.stream()
+        return bookings.stream()
                 .map(mapper::mapBookingToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
